tests/NormalTests/paczka1/small_fuzzy/66091357.err
Error in line 1: HaqgO S344 86,3
Error in line 5: HaqgO A69 69,5
Error in line 3: S290 A69 52,5
Error in line 4: dX2jdKBD S187 67,5
